libstdc++-arm-none-eabi (4) UNRELEASED; urgency=medium

  * Keep exceptions in the speed optimized version.
  * Use _nano suffix instead of _s for size optimized version of libraries.
  * Include pretty printer debug files.
  * Add myself to Uploaders.

 -- Thomas Preud'homme <thomas.preudhomme@arm.com>  Thu, 21 Aug 2014 06:27:59 +0000

libstdc++-arm-none-eabi (3) unstable; urgency=medium

  * Rebuilt using current gcc version (Closes: #751320)

 -- Agustin Henze <tin@debian.org>  Wed, 06 Aug 2014 17:50:55 -0300

libstdc++-arm-none-eabi (2) unstable; urgency=medium

  * Remove libstdc++-arm-wno-abi.diff patch from debian_patches.txt
    (Closes: #750324)

 -- Agustin Henze <tin@debian.org>  Fri, 13 Jun 2014 11:40:50 -0300

libstdc++-arm-none-eabi (1) unstable; urgency=medium

  * Initial release. (Closes: #736167)

 -- Agustin Henze <tin@debian.org>  Tue, 28 Jan 2014 08:18:44 -0300