@@ -4,6 +4,8 @@ libstdc++-arm-none-eabi (4) UNRELEASED; urgency=medium
   * Use _nano suffix instead of _s for size optimized version of libraries.
   * Include pretty printer debug files.
   * Add myself to Uploaders.
+  * Disable testing: with exception handling the tests actually run and it
+    takes too much time.
 
  -- Thomas Preud'homme <thomas.preudhomme@arm.com>  Thu, 21 Aug 2014 06:27:59 +0000
 
